# datasette-leaflet

./: .gitignore  README.md  pyproject.toml  setup.py  update_leaflet.py
.github/workflows/: publish.yml  test.yml
datasette_leaflet/: __init__.py
datasette_leaflet/static/: leaflet-v1.7.1.js  leaflet-v1.7.1.min.js  leaflet-v1.9.4.js
tests/: test_leaflet.py
